# rabbit

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  CONNECTION_TESTING.md  README.md  index.html  mutagen.yml  package.json  tsconfig.common.json  vite.config.ts
.github/: copilot-instructions.md
cert/: cert.pem  key.pem
datasheet/: RoboClaw 2x30A.pdf.markdown
docs/: ideas.md  issues.md  ros2.md  til.md  vpn_ssh.md
model/: chassis.svgbak
scripts/: bootstrap.sh  ssl.sh
workspaces/: compose.dev.yaml  compose.jetson.dev.yaml  compose.yaml
workspaces/bootstrap/: bootstrap.sh
workspaces/foxglove-bridge/: Dockerfile  entrypoint.sh
workspaces/model/: chassis.x_t
workspaces/monitoring/: loki-config.yaml  promtail-config.yaml  telegraf.conf
workspaces/nats/: init.sh  nats-server.conf
workspaces/pcb/: #auto_saved_files#  _autosave-rabbit_1.kicad_sch  rabbit_1.kicad_prl  rabbit_1.kicad_pro  rabbit_1.kicad_sch  ~rabbit_1.kicad_pcb.lck
workspaces/rabbit/: Dockerfile  README.md  compose.yaml  pyproject.toml  test.sh
workspaces/rabbit-camera/: Dockerfile  pyproject.toml
workspaces/rabbit-ina/: pyproject.toml
workspaces/rabbit-node/: pyproject.toml
workspaces/rabbit-power/: Dockerfile  pyproject.toml
workspaces/rabbit-roboclaw/: Dockerfile  pyproject.toml  test.py
workspaces/rabbit-ros2/: Dockerfile  build.sh
workspaces/rabbit-ros2/src/rabbit_interface/: CMakeLists.txt  package.xml
workspaces/rabbit-steering/: Dockerfile  pyproject.toml
workspaces/rabbit-test/: Dockerfile
workspaces/rabbit-webrtc/: Dockerfile  main.py  pyproject.toml
workspaces/rabbit-zed/: Dockerfile  pyproject.toml
workspaces/rabbit/docker/: Dockerfile.build  Dockerfile.deps  Dockerfile.docs  Dockerfile.nvblox  Dockerfile.realsense_example  build_images.py  install_cmake.sh  maybe_install_cuda_pytorch.sh  run_docker.sh
workspaces/rabbit/lib/: node.py  roboclaw.py
workspaces/rabbit/node/ina/: Dockerfile  main.py
workspaces/rabbit/node/roboclaw/: Dockerfile  main.py
workspaces/rabbit/node/steering/: main.py
workspaces/rabbit/rabbit/: setup.py
workspaces/rabbit/src/: client.py  main.py  roboclaw.py
workspaces/rabbit/src/lib/: model.py  node.py  zed.py
workspaces/rabbit/src/node/: ina.py  nvblox.py  roboclaw.py  steering.py  zed.py  zedxxxx.py
workspaces/rabbit/src/nvblox_torch/: MANIFEST.in  pyproject.toml  setup.py
workspaces/rabbit/src/nvblox_torch/cpp/: CMakeLists.txt
workspaces/rabbit/src/nvblox_torch/cpp/include/nvblox_torch/: py_mapper.h  py_mapper_params.h
workspaces/rabbit/src/nvblox_torch/cpp/src/: py_mapper.cu  py_mapper_params.cpp  py_nvblox.cu
workspaces/rabbit/src/nvblox_torch/cpp/tests/: CMakeLists.txt
workspaces/rabbit/src/nvblox_torch/nvblox_torch/: _version.py  mapper.py  mesh.py
workspaces/rabbit/src/nvblox_torch/nvblox_torch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
workspaces/rabbit/src/nvblox_torch/nvblox_torch/datasets/: sun3d_dataset.py
workspaces/rabbit/src/nvblox_torch/nvblox_torch/examples/esdf/: esdf.py
workspaces/rabbit/src/nvblox_torch/nvblox_torch/examples/gradients/: trajectory_optimization_example.py
workspaces/rabbit/src/nvblox_torch/nvblox_torch/examples/realsense/: run_realsense_mapper.py
workspaces/rabbit/src/nvblox_torch/nvblox_torch/examples/reconstruction/: sun3d.py
workspaces/rabbit/src/nvblox_torch/nvblox_torch/examples/utils/: scenes.py
workspaces/rabbit/src/nvblox_torch/nvblox_torch/examples/voxels/: voxels.py
workspaces/rabbit/src/nvblox_torch/nvblox_torch/tests/: benchmark.py  test_example_sun3d.py  test_mapper_add_frames.py  test_mapper_masking.py
workspaces/rabbit/src/nvblox_torch/nvblox_torch/tests/helpers/: data.py
workspaces/rabbit/src/pyzed/: sl.pyi
workspaces/ros2_ws/: Dockerfile  build.sh  run.sh
workspaces/ros2_ws/rabbit/: CMakeLists.txt  package.xml  setup.cfg  setup.py
workspaces/ros2_ws/rabbit/rabbit/: power_sensor.py
workspaces/server/: index.ts  package.json  tsconfig.json
workspaces/toolbox/: package.json  tsconfig.json
workspaces/video_stream/: index.html
workspaces/web/: index.html  package.json  tsconfig.json  vite.config.ts
zed/resources/: .8602_timing_cache  .a8602_timing_cache  .neural_depth_3.6.model_optimized-fbcbl-1-87-12020-8904-8602-8-128-2048-48-164-512-8-1-0e53-512  .neural_depth_3.6.model_optimized-kcebl-1-87-12020-8904-8602-8-128-2048-48-164-512-8-1-0e53-1024  .neural_depth_5.3.model_optimized-fbcbl-1-87-12020-8904-8602-8-128-2048-48-164-512-8-1-0e53-512  .neural_depth_5.3.model_optimized-kcebl-1-87-12020-8904-8602-8-128-2048-48-164-512-8-1-0e53-1024  .neural_depth_light_5.2.model_optimized-fbcbl-1-87-12020-8904-8602-8-128-2048-48-164-512-8-1-0e53-512  .objects_accurate_3.2.model_optimized-fbcbl-1-87-12020-8904-8602-8-128-2048-48-164-512-8-10  .objects_medium_3.2.model_optimized-ebgbl-1-87-12020-8904-8602-8-128-2048-48-164-512-8-10  .objects_performance_3.2.model_optimized-fbcbl-1-87-12020-8904-8602-8-128-2048-48-164-512-8-10  .person_head_accurate_2.6.model_optimized-jgabl-1-87-12020-8904-8602-8-128-2048-48-164-512-8-10  .person_head_performance_2.6.model_optimized-idcbl-1-87-12020-8904-8602-8-128-2048-48-164-512-8-10  neural_depth_5.3.model  neural_depth_light_5.2.model  (+10 more)
(+211 files in other folders)
