[project]
name = "rabbit"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "aiortc",
    "aiohttp", 
    "aiohttp-cors",
    "av",
    "opencv-python-headless",
    "websockets"
]

[project.optional-dependencies]
linux = [
    "evdev",
    "pyserial", 
    "adafruit-blinka",
    "adafruit-circuitpython-pca9685",
    "RPi.GPIO"
]
