[project]
name = "rabbit"
version = "0.0.1"
requires-python = "==3.10.0"
dependencies = [
    "cython>=3.0.0",
    "nats-py",
    "smbus2",
    "pyserial",
    "adafruit-circuitpython-servokit",
    "adafruit-blinka",
    "Jetson.GPIO",
    "opencv-python",
    "numpy>=2.0,<3.0.0",
    "pydantic",
    "lz4",
]
