<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rabbit</name>
  <version>0.0.0</version>
  <description>Robot Rabbit</description>
  <maintainer email="ser.alexeev@gmail.com">Sergey Alekseev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
