<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rabbit</name>
  <version>0.0.0</version>
  <description>Robot Rabbit Python nodes</description>
  <maintainer email="ser.alexeev@gmail.com">Sergey Alekseev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rabbit_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>