<?xml version="1.0"?>
<package format="3">
    <name>rabbit_interface</name>
    <version>0.0.1</version>
    <description>Robot Rabbit interface</description>
    <maintainer email="ser.alexeev@gmail.com">Sergey Alekseev</maintainer>
    <license>MIT</license>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
</package>
