[project]
name = "nvblox_torch"
description = "Pytorch interface for nvblox"

# Version is dynamically determined in setup.py
dynamic = ["version"]
dependencies = [
    "transforms3d>=0.4.2",
    "imageio>=2.35.0",
    "numpy",
    "open3d",
    "timm",
    "opencv-python",
    "einops",
    "nvtx",
    # The specific versions of torch and torchvision are sensitive to platform
    # * On x86 version of the public pypi packages supports CUDA. There we can simply pull them from pypi as usual.
    # * On Jetson, the pypi version does not support CUDA. we instead rely on CUDA-enabled versions being pre-installed on the system.
    #   These are specified in Dockerfile.jetson_deps. In order for these ones to not be overridden here, the version specifications
    #   below has to encompass the pre-installed versions
    "torch==2.3.0", # The CUDA version is 2.3.0
    "torchvision (>0.17.2,<=0.18.0)", # The CUDA version (0.18.0a0+6043bc2) is between 0.17.x and 0.18.0
    "matplotlib==3.10",
    # Torch 2.3 require numpy 1.X
    "numpy==1.26"
]

[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nvblox_torch*"]

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100"]
# NOTE(dtingdahl) files to check are specified in .pre-commit-config.yaml
